--- a/GoalPlanner/pom.xml
+++ b/GoalPlanner/pom.xml
@@ -95,7 +95,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>todoapp.Main</mainClass>
+                                    <mainClass>goalplanner.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
